--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Compiled class file
 *.class
 
+# Idea files
+*.idea/*
+*.idea/libraries/*
+*.iml
+workspace.xml
+
 # Log file
 *.log
 
@@ -18,6 +24,7 @@
 *.zip
 *.tar.gz
 *.rar
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
