--- a/RateCalculatorCore/pom.xml
+++ b/RateCalculatorCore/pom.xml
@@ -3,13 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>com.ratecalculator</groupId>
+            <artifactId>RateCalculatorMDS</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <packaging>jar</packaging>
     <parent>
         <groupId>com.ratecalculator</groupId>
         <artifactId>Parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.ratecalculator.core</groupId>
     <artifactId>RateCalculatorCore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
