--- a/RateCalculatorMDS/pom.xml
+++ b/RateCalculatorMDS/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>RateCalculatorMDS</artifactId>
 
+    <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
